[Feature] - Install axios

--- a/src/Component/SideBar/SideBar.module.scss
+++ b/src/Component/SideBar/SideBar.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     text-align: center;
     width: 10%;
-    height: 100vh;
+    height: 100%;
     left: 0;
     box-sizing: border-box;
     justify-content: center;
