--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,6 +1,17 @@
-.container {
-    width: 100%;
+.screen {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    height: 100vh;
+    .main {
+        display: flex;
+        flex-direction: row;
+        height: 100%;
+        .container {
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+    }
 }
+
